# hishamah-chess

./: .travis.yml  Cargo.toml  README.md
chess_engine/: Cargo.toml
chess_engine/src/: Piece.rs  board.rs  game.rs  lib.rs  piece.rs
chess_ui/: Cargo.toml
chess_ui/src/: chess_widget.rs  main.rs  network.rs  popups.rs  tile_widget.rs
